--- a/sesac/data/react/my-comic/index.css
+++ b/sesac/data/react/my-comic/index.css
@@ -69,8 +69,11 @@ button:focus-visible {
 }
 
 #mainLayout {
-  min-width: 640px;
-  width: 80%;
+  width: 100vw;
+}
+
+section {
+  padding: 1rem;
 }
 
 header,
@@ -118,11 +121,13 @@ footer {
 .contentUl {
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 .rankUl {
-  justify-content: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 .rankUl li {
@@ -134,10 +139,6 @@ footer {
   width: 100px;
   height: 100px;
   border: 1px solid #888;
-}
-
-h4 {
-  margin-left: 34px;
 }
 
 /* novel */
